updated yaml files

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: container-spring
-          image: swr.ap-southeast-3.myhuaweicloud.com/wesight/spring-test:v1.1
+          image: spring-test:v1.1
           resources:
             limits:
               cpu: 250m
